       PR rtl-optimization/80463        PR rtl-optimization/83972        PR rtl-optimization/83480

* sel-sched-ir.c (has_dependence_note_mem_dep): Take into account the
       correct producer for the insn.
       (tidy_control_flow): Fixup seqnos in case of debug insns.

       * gcc.dg/pr80463.c: New test.
       * g++.dg/pr80463.C: Likewise.
       * gcc.dg/pr83972.c: Likewise.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@259231 138bc75d-0d04-0410-961f-82ee72b054a4